syntax = "proto3";

package proto;

message StatusUpdate {
    string service_name = 1;
    string message = 2;
    string debugMessage = 3;
    bool failed = 4;
}

message IPConfig {
    string address = 1;
    uint32 prefix_length = 2;
    string gateway = 3;
}

message VirtualMachine {
    string id = 1;
    string template = 2;
    string name = 3;
    string fqdn = 4;
    string cluster_name = 5;
    uint32 memory_mb = 6;
    uint32 cpu_cores = 7;
    IPConfig ipv4 = 8;
    IPConfig ipv6 = 9;
}

message ProvisionizeRequest {
    string request_id = 1;
    VirtualMachine virtual_machine = 2;
}

service ProvisionizeService {
    rpc Provisionize(ProvisionizeRequest) returns (stream StatusUpdate) {}
    rpc Deprovisionize(ProvisionizeRequest) returns (stream StatusUpdate) {}
}
